select ekargala filter by default

--- a/src/ui/panchang.html
+++ b/src/ui/panchang.html
@@ -878,7 +878,7 @@
           cityNotFound: false, // New state for city not found error
           showMoshierWarning: false, // New: Controls visibility of the Moshier warning
           showError: false,
-          selectedFilters: [0, 1, 2, 3, 4, 5, 9],
+          selectedFilters: [0, 1, 2, 3, 4, 5, 9, 10],
           filterOptions: [
             // New: Options for nakshatra multi-select
             { text: "No Krakach Yoga", value: 0 },
